wekan/networking.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wekan-https
spec:
  entryPoints:
    - websecure
  tls:
    secretName: wekan-kanpai-tls
  routes:
    - match: Host(`wekan.kanp.ai`)
      kind: Rule
      services:
        - name: wekan
          scheme: http
          port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wekan-discord-https
spec:
  entryPoints:
    - websecure
  tls:
    secretName: wekan-discord-mib-dev-tls
  routes:
    - match: Host(`wekan-discord.mib.dev`)
      kind: Rule
      services:
        - name: wekan-discord
          scheme: http
          port: 8080
---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: wekan-http
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`wekan.kanp.ai`)
#       kind: Rule
#       services:
#         - name: wekan
#           scheme: http
#           port: 8080
#       middlewares:
#         - name: https-redirect
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: https-redirect
# # namespace: traefik-v2
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true
